[gd_scene load_steps=8 format=3 uid="uid://53q0uvr4jc7j"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_erxhr"]
[ext_resource type="FontFile" uid="uid://ufo0hj0jkl1o" path="res://assets/fonts/Abaddon Light.ttf" id="2_ngx71"]
[ext_resource type="FontFile" uid="uid://o7gqnagfnby2" path="res://assets/fonts/Abaddon Bold.ttf" id="3_d6rv0"]
[ext_resource type="Texture2D" uid="uid://74cqkw1w6i2m" path="res://assets/UI/ALL UI ASSETS on one sheet.png" id="3_laq56"]
[ext_resource type="PackedScene" uid="uid://bfh0ljnfhulri" path="res://scenes/inventory/inventory_slot.tscn" id="4_8udw3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h5tdo"]
atlas = ExtResource("3_laq56")
region = Rect2(576, 80, 80, 80)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j8in2"]
texture = SubResource("AtlasTexture_h5tdo")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_erxhr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 0.686275)

[node name="Label" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0.407843)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -296.0
offset_right = -385.0
offset_bottom = -255.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_d6rv0")
theme_override_font_sizes/font_size = 35
text = "[ pause ]"

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 38.0
offset_top = 100.0
offset_right = 438.0
offset_bottom = 296.0
theme_override_styles/panel = SubResource("StyleBoxTexture_j8in2")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 5

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_8udw3")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_8udw3")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_8udw3")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_8udw3")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_8udw3")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_8udw3")]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -514.0
offset_top = 214.0
offset_right = -112.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Save" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ngx71")
theme_override_font_sizes/font_size = 35
text = "Save"

[node name="Button_Load" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ngx71")
theme_override_font_sizes/font_size = 35
text = "Load"

[node name="Button_Back" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ngx71")
theme_override_font_sizes/font_size = 35
text = "Back to game"

[connection signal="pressed" from="Control/VBoxContainer/Button_Save" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button_Back" to="." method="_on_button_back_pressed"]
